# cpplog

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  library.h  tmp.txt  tmp2.txt
.github/workflows/: windows.yml
cmake/: cpplogConfig.cmake.in
docs/: Cpplog.drawio
docs/server/: .dockerignore  docker-compose.yml
docs/server/LogHttpServer/Logging/: LogsRequest.cs
docs/server/LogHttpServer/Properties/: launchSettings.json
example/: CMakeLists.txt  example.cpp
example/http/: win_http_sink.cpp  win_http_sink.h  win_http_sink_options.h  win_socket_guard.h
include/clog/: BaseLogger.h  ILogger.h  LogLevel.h
include/cpplog/: BaseLogger.h  ILogger.h  LogLevel.h  Logger.h  cpplog.h  logger.h  logger_builder.h  logger_configuration.h  logger_configurator.h  sink.h
include/cpplog/builders/: base_builder.h
include/cpplog/common/: file_sink_options.h  level.h  log.h  log_event.h  log_event_options.h  log_level.h  logger_options.h  rotation_file_sink_options.h
include/cpplog/extensions/: formatter.h
include/cpplog/loggers/: base_logger.h
include/cpplog/sinks/: base_sink.h  console_sink.h  file_rotation_sink.h  file_sink.h  rotation_file_sink.h  stdout_sink.h  win_http_sink.h
server/: LogHttpServer.sln
server/LogHttpServer/: Dockerfile  LogHttpServer.csproj  Program.cs
server/LogHttpServer/Logging/: AddLogsEndpoint.cs  LogRequest.cs
src/: BaseLogger.cpp  cpplog.cpp  logger.cpp  logger_builder.cpp  logger_configuration.cpp  logger_configurator.cpp
src/common/: file_sink_options.cpp  log.cpp  log_event.cpp  rotation_file_sink_options.cpp
src/extensions/: LevelExtensions.cpp  formatter.cpp  formatter.h  level_extensions.cpp  level_extensions.h
src/sinks/: base_sink.cpp  console_sink.cpp  file_sink.cpp  rotation_file_sink.cpp  stdout_sink.cpp  win_http_sink.cpp
test/: CMakeLists.txt  logger_tests.cpp
test/common/: log_event_tests.cpp
test/mocks/: mock_sink.h
tests/: CMakeLists.txt  cpplog_tests.cpp  file_sink_tests.cpp  logger_configuration_tests.cpp  logger_test.cpp  logger_tests.cpp
tests/common/: log_event_tests.cpp
tests/extensions/: formatter_tests.cpp
tests/helpers/: file_helpers.cpp  file_helpers.h  mock_sink.h
tests/mocks/: mock_sink.h
tests/sinks/: file_sink_tests.cpp  rotation_file_sink_tests.cpp  stdout_sink_tests.cpp
